[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vmd-ssa-denoise"
version = "0.1.0"
description = "A Python library for adaptive denoising of noisy explosion shockwave signals using Variational Mode Decomposition (VMD) optimized by Sparrow Search Algorithm (SSA)."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "hhdggzh1990-png", email = "hhdggzh1990@gmail.com"},
]
keywords = ["signal-processing", "vmd", "variational-mode-decomposition", "ssa", "sparrow-search-algorithm", "denoising", "shockwave", "signal-decomposition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Signal Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "isort", "flake8"]

[project.urls]
Homepage = "https://github.com/hhdggzh1990-png/vmd-ssa-denoise"
Repository = "https://github.com/hhdggzh1990-png/vmd-ssa-denoise"
Issues = "https://github.com/hhdggzh1990-png/vmd-ssa-denoise/issues"

[tool.setuptools.packages.find]
where = ["src"]
